# MCPackMan

./: README.md  pyproject.toml
mcpackman/: main.py
